--- a/CV.html
+++ b/CV.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="file:///D:/mid/mid.html" class="home-button">Home</a></li>
+            <li><a href="index.html" class="home-button">Home</a></li>
             
 
         </ul>
