--- a/works.html
+++ b/works.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="file:///D:/mid/mid.html" class="home-button">Home</a></li>
+            <li><a href="index.html" class="home-button">Home</a></li>
 
 
         </ul>
